--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/sb_forum?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=12345
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SMTP_EMAIL}
+spring.mail.password=${SMTP_SENHA}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
