--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.mail.username=${SMTP_EMAIL}
 spring.mail.password=${SMTP_SENHA}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.rabbitmq.addresses= ${RBT_ADDRESSES}
+spring.rabbitmq.queue=sb.forum
