--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sb_forum?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=12345
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SMTP_EMAIL}
@@ -11,3 +7,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.rabbitmq.addresses= ${RBT_ADDRESSES}
 spring.rabbitmq.queue=sb.forum
+
+server.port=8081
+
+spring.profiles.active=prod
