--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+spring.datasource.url=jdbc:h2:mem:sb_forum
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SMTP_EMAIL}
@@ -7,5 +18,3 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.rabbitmq.addresses= ${RBT_ADDRESSES}
 spring.rabbitmq.queue=sb.forum
-
-spring.profiles.active=prod
