feat: Implementação do OAuth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.datasource.url=jdbc:h2:mem:sb_forum
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
@@ -15,3 +18,9 @@ spring.mail.username=${SMTP_EMAIL}
 spring.mail.password=${SMTP_SENHA}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+security.oauth2.client.client-id=${CLIENT_ID:sb-forum}
+security.oauth2.client.client-secret=${CLIENT_SECRET:1234}
+
+jwt.signin-key=${JWT_SECRET:MY-JWT-SECRET}
+jwt.vality-seconds=${JWT_DURATION:86400}
