--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:sb_forum
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://localhost:3306/sb_forum
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
