--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=12345
-spring.datasource.url=jdbc:mysql://localhost:3306/sb_forum
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sb_forum
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
